--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container main-navigation">
+      <div class="container header__navigation">
         <nav class="navigation">
           <a href="./index.html" lang="en" class="logo logo__header"
             >Web<span class="logo__dark">Studio</span></a
@@ -500,19 +500,19 @@
         <form action="#" class="form">
           <p class="form__title">Залиште свої дані, ми вам передзвонимо</p>
           <div class="form__field">
-            <label for="name" class="form-label">Ім'я</label>
+            <label for="name" class="form__label">Ім'я</label>
             <div class="input-wrapper">
-              <input type="text" class="form-input" name="name" id="name" placeholder=" " />
-              <svg class="form-input__icon" width="18" height="18">
+              <input type="text" class="form__input" name="name" id="name" placeholder=" " />
+              <svg class="form__input__icon" width="18" height="18">
                 <use href="./images/symbol-defso.svg#icon-person"></use>
               </svg>
             </div>
           </div>
           <div class="form__field">
-            <label for="tel" class="form-label">Телефон</label>
+            <label for="tel" class="form__label">Телефон</label>
             <div class="input-wrapper">
-              <input type="tel" class="form-input" name="tel" id="tel" placeholder=" " /><svg
-                class="form-input__icon"
+              <input type="tel" class="form__input" name="tel" id="tel" placeholder=" " /><svg
+                class="form__input__icon"
                 width="18"
                 height="18"
               >
@@ -521,10 +521,10 @@
             </div>
           </div>
           <div class="form__field">
-            <label for="mail" class="form-label">Пошта</label>
+            <label for="mail" class="form__label">Пошта</label>
             <div class="input-wrapper">
-              <input type="email" class="form-input" name="mail" id="mail" placeholder=" " /><svg
-                class="form-input__icon"
+              <input type="email" class="form__input" name="mail" id="mail" placeholder=" " /><svg
+                class="form__input__icon"
                 width="18"
                 height="18"
               >
@@ -533,21 +533,21 @@
             </div>
           </div>
           <div class="form__field">
-            <label for="comment" class="form-label">Коментар</label>
+            <label for="comment" class="form__label">Коментар</label>
             <textarea
-              class="form-text"
+              class="form__text"
               name="comment"
               id="comment"
               placeholder="Введіть текст"
             ></textarea>
           </div>
-          <label class="check-label"
-            ><input type="checkbox" class="check-input" name="consent" />
-            <span class="check-span"
-              ><svg class="check-icon" width="11" height="8">
+          <label class="check"
+            ><input type="checkbox" class="check__input" name="consent" />
+            <span class="check__span"
+              ><svg class="check__icon" width="11" height="8">
                 <use href="./images/symbol-defso.svg#icon-check"></use></svg></span
             >Погоджуюся з розсилкою та приймаю&nbsp;
-            <a href="#" class="check-link">Умови договору</a></label
+            <a href="#" class="check__link">Умови договору</a></label
           >
           <button type="submit" class="button form__button">Відправити</button>
         </form>
