--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container main-navigation">
+      <div class="container header__navigation">
         <nav class="navigation">
           <a href="./index.html" lang="en" class="logo logo__header"
             >Web<span class="logo__dark">Studio</span></a
@@ -74,147 +74,147 @@
           <ul class="examples">
             <li class="examples__item">
               <a href="#" class="link examples__link">
-                <div class="card-wrap">
+                <div class="examples__wrap">
                   <img src="./images/tehnokryak.jpg" alt="приклад веб-сайту" />
-                  <p class="overlay-text">
+                  <p class="examples__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="examples-box">
-                  <h2 class="examples-title">Технокряк</h2>
-                  <p class="examples-text">Веб-сайт</p>
+                <div class="examples__box">
+                  <h2 class="examples__title">Технокряк</h2>
+                  <p class="examples__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="examples__item">
               <a href="#" class="link examples__link">
-                <div class="card-wrap">
+                <div class="examples__wrap">
                   <img src="./images/poster.jpg" alt="афіша баскетбольного матчу" />
-                  <p class="overlay-text">
+                  <p class="examples__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="examples-box">
-                  <h2 class="examples-title">
+                <div class="examples__box">
+                  <h2 class="examples__title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
-                  <p class="examples-text">Дизайн</p>
+                  <p class="examples__text">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="examples__item">
               <a href="#" class="link examples__link">
-                <div class="card-wrap">
+                <div class="examples__wrap">
                   <img src="./images/sea.jpg" alt="приклад додатку для ресторану" />
-                  <p class="overlay-text">
+                  <p class="examples__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="examples-box">
-                  <h2 class="examples-title">Ресторан <span lang="en">Seafood</span></h2>
-                  <p class="examples-text">Додаток</p>
+                <div class="examples__box">
+                  <h2 class="examples__title">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="examples__text">Додаток</p>
                 </div>
               </a>
             </li>
             <li class="examples__item">
               <a href="#" class="link examples__link">
-                <div class="card-wrap">
+                <div class="examples__wrap">
                   <img src="./images/prime.jpg" alt="аудіо-навушники" />
-                  <p class="overlay-text">
+                  <p class="examples__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="examples-box">
-                  <h2 class="examples-title">Проєкт<span lang="en">Prime</span></h2>
-                  <p class="examples-text">Маркетинг</p>
+                <div class="examples__box">
+                  <h2 class="examples__title">Проєкт<span lang="en">Prime</span></h2>
+                  <p class="examples__text">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="examples__item">
               <a href="#" class="link examples__link">
-                <div class="card-wrap">
+                <div class="examples__wrap">
                   <img src="./images/boxes.jpg" alt="приклад додатку" />
-                  <p class="overlay-text">
+                  <p class="examples__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="examples-box">
-                  <h2 class="examples-title">Проєкт<span lang="en">Boxes</span></h2>
-                  <p class="examples-text">Додаток</p>
+                <div class="examples__box">
+                  <h2 class="examples__title">Проєкт<span lang="en">Boxes</span></h2>
+                  <p class="examples__text">Додаток</p>
                 </div>
               </a>
             </li>
             <li class="examples__item">
               <a href="#" class="link examples__link">
-                <div class="card-wrap">
+                <div class="examples__wrap">
                   <img src="./images/inspiration.jpg" alt="приклад веб-сайту" />
-                  <p class="overlay-text">
+                  <p class="examples__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="examples-box">
-                  <h2 class="examples-title" lang="en">Inspiration has no Borders</h2>
-                  <p class="examples-text">Веб-сайт</p>
+                <div class="examples__box">
+                  <h2 class="examples__title" lang="en">Inspiration has no Borders</h2>
+                  <p class="examples__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="examples__item">
               <a href="#" class="link examples__link">
-                <div class="card-wrap">
+                <div class="examples__wrap">
                   <img src="./images/le.jpg" alt="приклад дизайна журналу" />
-                  <p class="overlay-text">
+                  <p class="examples__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="examples-box">
-                  <h2 class="examples-title">Видання <span lang="en">Limited Edition</span></h2>
-                  <p class="examples-text">Дизайн</p>
+                <div class="examples__box">
+                  <h2 class="examples__title">Видання <span lang="en">Limited Edition</span></h2>
+                  <p class="examples__text">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="examples__item">
               <a href="#" class="link examples__link">
-                <div class="card-wrap">
+                <div class="examples__wrap">
                   <img src="./images/lab.jpg" alt="лейба етикетка" />
-                  <p class="overlay-text">
+                  <p class="examples__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="examples-box">
-                  <h2 class="examples-title">Проєкт <span lang="en">LAB</span></h2>
-                  <p class="examples-text">Маркетинг</p>
+                <div class="examples__box">
+                  <h2 class="examples__title">Проєкт <span lang="en">LAB</span></h2>
+                  <p class="examples__text">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="examples__item">
               <a href="#" class="link examples__link">
-                <div class="card-wrap">
+                <div class="examples__wrap">
                   <img src="./images/growing.jpg" alt="приклад додатку для бізнесу" />
-                  <p class="overlay-text">
+                  <p class="examples__overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                     Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
                     приватну особу.
                   </p>
                 </div>
-                <div class="examples-box">
-                  <h2 class="examples-title" lang="en">Growing Business</h2>
-                  <p class="examples-text">Додаток</p>
+                <div class="examples__box">
+                  <h2 class="examples__title" lang="en">Growing Business</h2>
+                  <p class="examples__text">Додаток</p>
                 </div>
               </a>
             </li>
