--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header__navigation">
+      <div class="container header__container">
         <nav class="navigation">
-          <a href="./index.html" lang="en" class="logo logo__header"
-            >Web<span class="logo__dark">Studio</span></a
+          <a href="./index.html" lang="en" class="logo navigation__logo"
+            >Web<span class="logo--dark">Studio</span></a
           >
           <ul class="pages">
             <li class="pages__item">
-              <a href="./index.html" class="link pages__link pages__link--current">Студія</a>
+              <a href="./index.html" class="pages__link pages__link--current">Студія</a>
             </li>
             <li class="pages__item">
-              <a href="./portfolio.html" target="_parent" class="link pages__link">Портфоліо</a>
+              <a href="./portfolio.html" target="_parent" class="pages__link">Портфоліо</a>
             </li>
-            <li class="pages__item"><a href="#" class="link pages__link">Контакти</a></li>
+            <li class="pages__item"><a href="#" class="pages__link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contacts">
           <li class="contacts__item">
-            <a href="mailto:info@devstudio.com" lang="en" class="link contacts__link">
+            <a href="mailto:info@devstudio.com" lang="en" class="contacts__link">
               <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/symbol-defso.svg#icon-envelope"></use>
               </svg>
@@ -34,7 +34,7 @@
             >
           </li>
           <li class="contacts__item">
-            <a href="tel:+380961111111" class="link contacts__link">
+            <a href="tel:+380961111111" class="contacts__link">
               <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/symbol-defso.svg#icon-smartphone"></use>
               </svg>
@@ -145,7 +145,7 @@
                       href="https://www.instagram.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      class="link link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-instagram"></use></svg
@@ -156,7 +156,7 @@
                       href="https://twitter.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-twitter"></use></svg
@@ -167,7 +167,7 @@
                       href="https://facebook.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-facebook"></use></svg
@@ -178,7 +178,7 @@
                       href="https://linkedin.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-linkedin"></use></svg
@@ -198,7 +198,7 @@
                       href="https://www.instagram.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-instagram"></use></svg
@@ -209,7 +209,7 @@
                       href="https://twitter.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-twitter"></use></svg
@@ -220,7 +220,7 @@
                       href="https://facebook.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-facebook"></use></svg
@@ -231,7 +231,7 @@
                       href="https://linkedin.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-linkedin"></use></svg
@@ -251,7 +251,7 @@
                       href="https://www.instagram.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-instagram"></use></svg
@@ -262,7 +262,7 @@
                       href="https://twitter.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-twitter"></use></svg
@@ -273,7 +273,7 @@
                       href="https://facebook.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-facebook"></use></svg
@@ -284,7 +284,7 @@
                       href="https://linkedin.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-linkedin"></use></svg
@@ -304,7 +304,7 @@
                       href="https://www.instagram.com"
                       target="_blank"
                       rel="noopener noreferrer"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-instagram"></use></svg
@@ -315,7 +315,7 @@
                       href="https://twitter.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-twitter"></use></svg
@@ -326,7 +326,7 @@
                       href="https://facebook.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-facebook"></use></svg
@@ -337,7 +337,7 @@
                       href="https://linkedin.com"
                       target="_blank"
                       rel="noopener noreferrer nofollov"
-                      class="link social__link"
+                      class="social__link"
                     >
                       <svg width="20" height="20">
                         <use href="./images/symbol-defso.svg#icon-linkedin"></use></svg
@@ -354,42 +354,42 @@
           <h2 class="title title--with-margin-bottom">Постійні клієнти</h2>
           <ul class="customers">
             <li class="customers__item">
-              <a href="#" class="link customers__link">
+              <a href="#" class="customers__link">
                 <svg width="106px" height="60px">
                   <use href="./images/symbol-defso.svg#icon-logoa"></use>
                 </svg>
               </a>
             </li>
             <li class="customers__item">
-              <a href="#" class="link customers__link">
+              <a href="#" class="customers__link">
                 <svg width="106px" height="60px">
                   <use href="./images/symbol-defso.svg#icon-logob"></use>
                 </svg>
               </a>
             </li>
             <li class="customers__item">
-              <a href="#" class="link customers__link">
+              <a href="#" class="customers__link">
                 <svg width="106px" height="60px">
                   <use href="./images/symbol-defso.svg#icon-logoc"></use>
                 </svg>
               </a>
             </li>
             <li class="customers__item">
-              <a href="#" class="link customers__link">
+              <a href="#" class="customers__link">
                 <svg width="106px" height="60px">
                   <use href="./images/symbol-defso.svg#icon-logod"></use>
                 </svg>
               </a>
             </li>
             <li class="customers__item">
-              <a href="#" class="link customers__link">
+              <a href="#" class="customers__link">
                 <svg width="106px" height="60px">
                   <use href="./images/symbol-defso.svg#icon-logoe"></use>
                 </svg>
               </a>
             </li>
             <li class="customers__item">
-              <a href="#" class="link customers__link">
+              <a href="#" class="customers__link">
                 <svg width="106px" height="60px">
                   <use href="./images/symbol-defso.svg#icon-logof"></use>
                 </svg>
@@ -402,7 +402,7 @@
     <footer class="footer">
       <div class="container container--with-flex">
         <div class="left-footer">
-          <a href="#" lang="en" class="logo">Web<span class="logo__light">Studio</span></a>
+          <a href="#" lang="en" class="logo">Web<span class="logo--light">Studio</span></a>
           <address class="address">
             <ul>
               <li class="address__item">
@@ -410,17 +410,17 @@
                   href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="link address__map"
+                  class="address__map"
                   >м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
               <li class="address__item">
-                <a href="mailto:info@devstudio.com" lang="en" class="link address__mail-and-tel"
+                <a href="mailto:info@devstudio.com" lang="en" class="address__mail-and-tel"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="address__item">
-                <a href="tel:+380961111111" class="link address__mail-and-tel">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="address__mail-and-tel">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
@@ -433,7 +433,7 @@
                 href="https://www.instagram.com"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="link social__link"
+                class="social__link"
               >
                 <svg width="20" height="20">
                   <use href="./images/symbol-defso.svg#icon-instagram"></use></svg
@@ -444,7 +444,7 @@
                 href="https://twitter.com"
                 target="_blank"
                 rel="noopener noreferrer nofollov"
-                class="link social__link"
+                class="social__link"
               >
                 <svg width="20" height="20">
                   <use href="./images/symbol-defso.svg#icon-twitter"></use></svg
@@ -455,7 +455,7 @@
                 href="https://facebook.com"
                 target="_blank"
                 rel="noopener noreferrer nofollov"
-                class="link social__link"
+                class="social__link"
               >
                 <svg width="20" height="20">
                   <use href="./images/symbol-defso.svg#icon-facebook"></use></svg
@@ -466,7 +466,7 @@
                 href="https://linkedin.com"
                 target="_blank"
                 rel="noopener noreferrer nofollov"
-                class="link social__link"
+                class="social__link"
               >
                 <svg width="20" height="20">
                   <use href="./images/symbol-defso.svg#icon-linkedin"></use></svg
