--- a/portfolio.html
+++ b/portfolio.html
@@ -9,29 +9,26 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header__navigation">
+      <div class="container header__container">
         <nav class="navigation">
-          <a href="./index.html" lang="en" class="logo logo__header"
-            >Web<span class="logo__dark">Studio</span></a
+          <a href="./index.html" lang="en" class="logo navigation__logo"
+            >Web<span class="logo--dark">Studio</span></a
           >
           <ul class="pages">
             <li class="pages__item">
-              <a href="./index.html" class="link pages__link">Студія</a>
+              <a href="./index.html" class="pages__link">Студія</a>
             </li>
             <li class="pages__item">
-              <a
-                href="./portfolio.html"
-                target="_parent"
-                class="link pages__link pages__link--current"
+              <a href="./portfolio.html" target="_parent" class="pages__link pages__link--current"
                 >Портфоліо</a
               >
             </li>
-            <li class="pages__item"><a href="#" class="link pages__link">Контакти</a></li>
+            <li class="pages__item"><a href="#" class="pages__link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contacts">
           <li class="contacts__item">
-            <a href="mailto:info@devstudio.com" lang="en" class="link contacts__link">
+            <a href="mailto:info@devstudio.com" lang="en" class="contacts__link">
               <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/symbol-defso.svg#icon-envelope"></use>
               </svg>
@@ -39,7 +36,7 @@
             >
           </li>
           <li class="contacts__item">
-            <a href="tel:+380961111111" class="link contacts__link">
+            <a href="tel:+380961111111" class="contacts__link">
               <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/symbol-defso.svg#icon-smartphone"></use>
               </svg>
@@ -73,7 +70,7 @@
           </ul>
           <ul class="examples">
             <li class="examples__item">
-              <a href="#" class="link examples__link">
+              <a href="#" class="examples__link">
                 <div class="examples__wrap">
                   <img src="./images/tehnokryak.jpg" alt="приклад веб-сайту" />
                   <p class="examples__overlay">
@@ -89,7 +86,7 @@
               </a>
             </li>
             <li class="examples__item">
-              <a href="#" class="link examples__link">
+              <a href="#" class="examples__link">
                 <div class="examples__wrap">
                   <img src="./images/poster.jpg" alt="афіша баскетбольного матчу" />
                   <p class="examples__overlay">
@@ -107,7 +104,7 @@
               </a>
             </li>
             <li class="examples__item">
-              <a href="#" class="link examples__link">
+              <a href="#" class="examples__link">
                 <div class="examples__wrap">
                   <img src="./images/sea.jpg" alt="приклад додатку для ресторану" />
                   <p class="examples__overlay">
@@ -123,7 +120,7 @@
               </a>
             </li>
             <li class="examples__item">
-              <a href="#" class="link examples__link">
+              <a href="#" class="examples__link">
                 <div class="examples__wrap">
                   <img src="./images/prime.jpg" alt="аудіо-навушники" />
                   <p class="examples__overlay">
@@ -139,7 +136,7 @@
               </a>
             </li>
             <li class="examples__item">
-              <a href="#" class="link examples__link">
+              <a href="#" class="examples__link">
                 <div class="examples__wrap">
                   <img src="./images/boxes.jpg" alt="приклад додатку" />
                   <p class="examples__overlay">
@@ -155,7 +152,7 @@
               </a>
             </li>
             <li class="examples__item">
-              <a href="#" class="link examples__link">
+              <a href="#" class="examples__link">
                 <div class="examples__wrap">
                   <img src="./images/inspiration.jpg" alt="приклад веб-сайту" />
                   <p class="examples__overlay">
@@ -171,7 +168,7 @@
               </a>
             </li>
             <li class="examples__item">
-              <a href="#" class="link examples__link">
+              <a href="#" class="examples__link">
                 <div class="examples__wrap">
                   <img src="./images/le.jpg" alt="приклад дизайна журналу" />
                   <p class="examples__overlay">
@@ -187,7 +184,7 @@
               </a>
             </li>
             <li class="examples__item">
-              <a href="#" class="link examples__link">
+              <a href="#" class="examples__link">
                 <div class="examples__wrap">
                   <img src="./images/lab.jpg" alt="лейба етикетка" />
                   <p class="examples__overlay">
@@ -203,7 +200,7 @@
               </a>
             </li>
             <li class="examples__item">
-              <a href="#" class="link examples__link">
+              <a href="#" class="examples__link">
                 <div class="examples__wrap">
                   <img src="./images/growing.jpg" alt="приклад додатку для бізнесу" />
                   <p class="examples__overlay">
@@ -225,7 +222,7 @@
     <footer class="footer">
       <div class="container container--with-flex">
         <div class="left-footer">
-          <a href="#" lang="en" class="logo">Web<span class="logo__light">Studio</span></a>
+          <a href="#" lang="en" class="logo">Web<span class="logo--light">Studio</span></a>
           <address class="address">
             <ul>
               <li class="address__item">
@@ -233,17 +230,17 @@
                   href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="link address__map"
+                  class="address__map"
                   >м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
               <li class="address__item">
-                <a href="mailto:info@devstudio.com" lang="en" class="link address__mail-and-tel"
+                <a href="mailto:info@devstudio.com" lang="en" class="address__mail-and-tel"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="address__item">
-                <a href="tel:+380961111111" class="link address__mail-and-tel">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="address__mail-and-tel">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
@@ -256,7 +253,7 @@
                 href="https://www.instagram.com"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="link social__link"
+                class="social__link"
               >
                 <svg width="20" height="20">
                   <use href="./images/symbol-defso.svg#icon-instagram"></use></svg
@@ -267,7 +264,7 @@
                 href="https://twitter.com"
                 target="_blank"
                 rel="noopener noreferrer nofollov"
-                class="link social__link"
+                class="social__link"
               >
                 <svg width="20" height="20">
                   <use href="./images/symbol-defso.svg#icon-twitter"></use></svg
@@ -278,7 +275,7 @@
                 href="https://facebook.com"
                 target="_blank"
                 rel="noopener noreferrer nofollov"
-                class="link social__link"
+                class="social__link"
               >
                 <svg width="20" height="20">
                   <use href="./images/symbol-defso.svg#icon-facebook"></use></svg
@@ -289,7 +286,7 @@
                 href="https://linkedin.com"
                 target="_blank"
                 rel="noopener noreferrer nofollov"
-                class="link social__link"
+                class="social__link"
               >
                 <svg width="20" height="20">
                   <use href="./images/symbol-defso.svg#icon-linkedin"></use></svg
