--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
       <div class="container header__container">
         <nav class="navigation">
           <a href="./index.html" lang="en" class="logo navigation__logo"
-            >Web<span class="logo--dark">Studio</span></a
+            >Web<span class="logo__dark">Studio</span></a
           >
           <ul class="pages">
             <li class="pages__item">
@@ -222,7 +222,7 @@
     <footer class="footer">
       <div class="container container--with-flex">
         <div class="left-footer">
-          <a href="#" lang="en" class="logo">Web<span class="logo--light">Studio</span></a>
+          <a href="#" lang="en" class="logo">Web<span class="logo__light">Studio</span></a>
           <address class="address">
             <ul>
               <li class="address__item">
