--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container header__container">
         <nav class="navigation">
           <a href="./index.html" lang="en" class="logo navigation__logo"
-            >Web<span class="logo--dark">Studio</span></a
+            >Web<span class="logo__dark">Studio</span></a
           >
           <ul class="pages">
             <li class="pages__item">
@@ -107,7 +107,7 @@
       </section>
       <section class="section section--no-padding-top">
         <div class="container">
-          <h2 class="title title--with-margin-bottom">Чим ми займаємося</h2>
+          <h2 class="section__title section__title--with-margin-bottom">Чим ми займаємося</h2>
           <ul class="what-we-do">
             <li class="what-we-do__item">
               <img src="./images/img.jpg" alt="десктопні додатки" width="370" />
@@ -132,7 +132,7 @@
       </section>
       <section class="section section--another-background">
         <div class="container">
-          <h2 class="title title--with-margin-bottom">Наша команда</h2>
+          <h2 class="section__title section__title--with-margin-bottom">Наша команда</h2>
           <ul class="team">
             <li class="team__item">
               <img src="./images/productdesigner.jpg" alt="фото Ігора Дем'яненко" width="270" />
@@ -402,7 +402,7 @@
     <footer class="footer">
       <div class="container container--with-flex">
         <div class="left-footer">
-          <a href="#" lang="en" class="logo">Web<span class="logo--light">Studio</span></a>
+          <a href="#" lang="en" class="logo">Web<span class="logo__light">Studio</span></a>
           <address class="address">
             <ul>
               <li class="address__item">
