--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 class="title title--with-margin-bottom">Постійні клієнти</h2>
+          <h2 class="section__title section__title--with-margin-bottom">Постійні клієнти</h2>
           <ul class="customers">
             <li class="customers__item">
               <a href="#" class="customers__link">
